fix(developer experts card): Add dark mode compatability (#2919)

--- a/src/components/page/intro/next/DeveloperExperts/index.module.scss
+++ b/src/components/page/intro/next/DeveloperExperts/index.module.scss
@@ -1,5 +1,15 @@
+:global {
+  html[data-theme='dark'] {
+    --c-bg-dev-experts: var(--token-secondary-bg-c);
+  }
+
+  :root {
+    --c-bg-dev-experts: var(--c-indigo-10);
+  }
+}
+
 .developerExperts {
-  background-color: var(--c-indigo-10);
+  background-color: var(--c-bg-dev-experts);
 
   padding: 2.5rem;
 
@@ -13,6 +23,8 @@
 
   &Title {
     margin-block-end: 0.5rem;
+
+    color: var(--token-heading-color-dark);
   }
 
   &Description {
@@ -20,7 +32,7 @@
 
     line-height: 1.6 !important;
 
-    color: var(--c-indigo-90);
+    // color: var(--c-indigo-90);
   }
 
   &Links {
